After F10 menu Enter key opens file instead of menu action
via https://launchpad.net/bugs/1968792 Confirmed by me.
When pressing F10 on Nautilus, the menu pops. Then the arrow keys navigate the menu, but when pressing Enter, does not execute the selected menu action. IE: if folder is selected, press F10, menu pops down arrow to choose "open in terminal", press enter, Nautilus navigates to the selected folder instead of opening terminal in the current location. Also with files: if text (or any) file is selected, press F10, menu pops, choose any action with arrows, press enter, gedit (or whatever) opens selected file.
Tested all actions then selecting files or folders, same result.
Expected behavior: After pressing F10, focus should be on the menu that just pops up, until ESC is pressed or mouse clicks somewhere else or focus is shifted by other means, so when pressing ENTER action gets performed. IE: file or folder is selected, press F10, down arrow to select PROPERTIES, press ENTER, PROPERTIES of selected item are shown.
Also tried with SPACEBAR (just in case), but the result is the same.
DistroRelease: Ubuntu 22.04 Package: nautilus 1:42.0-1ubuntu2